Issue #18137: Detect integer overflow on precision in float.__format__() and complex.__format__().